--- a/bda-project-stack.yml
+++ b/bda-project-stack.yml
@@ -1,11 +1,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: 'CloudFormation template to create Bedrock Data Automation project with driving license blueprint'
-
+Parameters:
+  BlueprintNamePrefix:
+    Type: String
+    Description: Prefix of the blueprint name
+    Default: driving-license
+  BdaProjectNamePrefix:
+    Type: String
+    Description: Prefix of the BDA project name
+    Default: bda-project
 Resources:
   DrivingLicenseBlueprint:
     Type: AWS::Bedrock::Blueprint
     Properties:
-      BlueprintName: driving-license-blueprint
+      BlueprintName: !Sub
+        - "${blueprintprefix}-${stackid}"
+        - blueprintprefix: !Ref "BlueprintNamePrefix"
+          stackid: !Select ["2", !Split ["/", !Ref "AWS::StackId"]]
       Type: DOCUMENT
       Schema:
         $schema: "http://json-schema.org/draft-07/schema#"
@@ -75,8 +86,11 @@ Resources:
     Type: AWS::Bedrock::DataAutomationProject
     DependsOn: DrivingLicenseBlueprint
     Properties:
-      ProjectName: bda-project
-      StandardOutputConfiguration: 
+      ProjectName: !Sub
+        - "${projectprefix}-${stackid}"
+        - projectprefix: !Ref "BdaProjectNamePrefix"
+          stackid: !Select ["2", !Split ["/", !Ref "AWS::StackId"]]
+      StandardOutputConfiguration:
         Document:
           Extraction:
             Granularity:
